fix toast not showing

--- a/frontend/src/assets/scss/global.scss
+++ b/frontend/src/assets/scss/global.scss
@@ -16,7 +16,7 @@ html, body, #app {
   max-width: 1300px;
 }
 
-.toast {
+.custom-toast {
   background: red !important;
-  color: white
+  color: white !important;
 }
